[project]
name = "agent"
version = "0.1.0"
description = "Agent for log file searching."
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["fastapi[standard]>=0.116.1", "pydantic-settings>=2.10.1"]

[tool.ruff]
line-length = 79
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
ignore = [
    "D102",    # undocumented-public-method
    "D103",    # undocumented-public-function
    "D100",    # undocumented-public-module
    "D104",    # undocumented-public-package
    "D106",    # undocumented-public-nested-class
    "D107",    # undocumented-public-init
    "D203",    # one-blank-line-before-class
    "D212",    # multi-line-summary-first-line
]
select = ["ALL"]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-line-length = "dynamic"

[tool.mypy]
plugins = ['pydantic.mypy']
ignore_missing_imports = true
